css/photo.css
body {
	background: white;
}

.picture-container {
	top:0;
	left:0;
    width:100%;
    position: absolute;
	overflow: hidden;
}

.picture-holder {
	list-style-type:none;
	margin:0;
	padding:0;
}

.picture {
}

img {
	margin-bottom: 0.9vh;
    width:100%;
}

@media screen and (orientation: landscape) {
	.picture-container {
		bottom:0;
		height:100%;
		overflow:auto;
		-webkit-overflow-scrolling: touch;
	}

	.picture-holder {
		position: relative;
		list-style-type:none;
		display: flex;
		height:100%;
	}

	.picture {
		height: 100%;
		display: inline-block;
		margin-right: 2vw;
	}

	img {
		height:100%;
		width: auto;
	}
}

